--- a/device/CMakeLists.txt
+++ b/device/CMakeLists.txt
@@ -1,29 +1,29 @@
 cmake_minimum_required(VERSION 3.18)
 
 include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
-project(dev_hid_composite C CXX ASM)
+project(RP_PICO_USB C CXX ASM)
 pico_sdk_init()
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(dev_hid_composite)
+add_executable(RP_PICO_USB)
 
-target_sources(dev_hid_composite PUBLIC
+target_sources(RP_PICO_USB PUBLIC
         ${CMAKE_CURRENT_LIST_DIR}/main.c
         ${CMAKE_CURRENT_LIST_DIR}/usb_descriptors.c
         )
 
 # Make sure TinyUSB can find tusb_config.h
-target_include_directories(dev_hid_composite PUBLIC
+target_include_directories(RP_PICO_USB PUBLIC
         ${CMAKE_CURRENT_LIST_DIR})
 
 # In addition to pico_stdlib required for common PicoSDK functionality, add dependency on tinyusb_device
 # for TinyUSB device support and tinyusb_board for the additional board support library used by the example
-target_link_libraries(dev_hid_composite PUBLIC pico_stdlib tinyusb_device tinyusb_board)
+target_link_libraries(RP_PICO_USB PUBLIC pico_stdlib tinyusb_device tinyusb_board)
 
 # Uncomment this line to enable fix for Errata RP2040-E5 (the fix requires use of GPIO 15)
-#target_compile_definitions(dev_hid_composite PUBLIC PICO_RP2040_USB_DEVICE_ENUMERATION_FIX=1)
+#target_compile_definitions(RP_PICO_USB PUBLIC PICO_RP2040_USB_DEVICE_ENUMERATION_FIX=1)
 
-pico_add_extra_outputs(dev_hid_composite)
+pico_add_extra_outputs(RP_PICO_USB)
 
